# lmms

./: .gitignore  CMakeLists.txt
plugins/AudioFileProcessor/qml/: AudioFileProcessorGui.cpp  AudioFileProcessorGui.h  BottomPanel.qml  CMakeLists.txt
plugins/Kicker/core/: CMakeLists.txt  Kicker.cpp  Kicker.h  KickerOsc.h
plugins/Kicker/qml/: BottomPanel.qml  CMakeLists.txt  KickerGui.cpp  KickerGui.h
plugins/TripleOscillator/QML/: BottomPanel.qml  CMakeLists.txt  OscillatorPanel.qml  TripleOscillatorGui.cpp  TripleOscillatorGui.h
src/: CMakeLists.txt  lmmsconfig.h.in
src/core/: AudioEngine.cpp  AudioEngine.h  AudioEngineWorkerThread.h  AutomatableModel.cpp  AutomatableModel.h  AutomationClip.cpp  AutomationClip.h  BufferManager.cpp  BufferManager.h  CMakeLists.txt  Clip.cpp  Clip.h  ComboBoxModel.cpp  ComboBoxModel.h  ConfigManager.cpp  ConfigManager.h  Controller.cpp  Controller.h  ControllerConnection.cpp  ControllerConnection.h  CoreApplication.cpp  DataFile.cpp  DataFile.h  DetuningHelper.cpp  DetuningHelper.h  Effect.cpp  EffectChain.cpp  EffectChain.h  EffectControls.h  Engine.cpp  Engine.h  EnvelopeAndLfoParameters.cpp  EnvelopeAndLfoParameters.h  ImportFilter.cpp  InlineAutomation.cpp  InlineAutomation.h  Instrument.cpp  InstrumentFunctions.cpp  InstrumentFunctions.h  InstrumentPlayHandle.cpp  (+76 more)
src/core/audio/: AudioAAudio.cpp  AudioAAudio.h  AudioAlsa.h  AudioDevice.h  AudioDummy.cpp  AudioDummy.h  AudioFileDevice.cpp  AudioJack.cpp  AudioJack.h  AudioOss.cpp  AudioOss.h  AudioPort.cpp  AudioPort.h  AudioPortAudio.cpp  AudioPortAudio.h  AudioPulseAudio.cpp  AudioPulseAudio.h  AudioSdl.cpp  AudioSdl.h
src/core/base/: CMakeLists.txt  lmms_static_vars.cpp  lmms_static_vars.h
src/core/config/: CMakeLists.txt  ConfigManager.cpp
src/core/controller/: CMakeLists.txt  Controller.h  ControllerConnection.h
src/core/effect/: CMakeLists.txt
src/core/engine/: AudioEngine.cpp  AudioEngine.h  CMakeLists.txt  Engine.cpp  Engine.h
src/core/filter/: BasicFilters.h  CMakeLists.txt
src/core/handles/: CMakeLists.txt  InstrumentPlayHandle.h  PlayHandle.cpp  PlayHandle.h
src/core/include/: InstrumentTrack.h  SampleTrack.h  Track.h
src/core/instrument/: CMakeLists.txt  DummyInstrument.h  Instrument.cpp  Instrument.h
src/core/interface/: AutomationNode.cpp  AutomationNode.h  CMakeLists.txt  Clipboard.cpp  IAudioDevice.h  IAudioEngine.h  IAudioPort.h  IBufferManager.h  IClip.h  IConfigManager.h  IController.h  IControllerConnection.h  ICoreApplication.h  IDataFile.h  IDetuningHelper.h  IEffectChain.h  IEngine.cpp  IEngine.h  IEnvelopeAndLfoParameters.h  IInstrumentFunctions.h  IInstrumentSoundShaping.h  IKeymap.h  IMemoryManager.h  IMicrotuner.h  IMidiClient.cpp  IMidiClient.h  IMidiController.h  IMidiEvent.h  IMidiPort.h  IMixer.h  IModel.h  IModels.cpp  IModels.h  IOscillator.h  IPathUtil.h  IPatternStore.h  IPeakControllerEffect.h  IPiano.h  IPlayHandle.h  IPlugin.h  (+22 more)
src/core/journalling/: CMakeLists.txt  JournallingObject.cpp  ProjectJournal.cpp  ProjectJournal.h
src/core/lv2/: Lv2ControlBase.cpp  Lv2ControlBase.h  Lv2Proc.cpp  Lv2SubPluginFeatures.cpp
src/core/memory/: CMakeLists.txt
src/core/midi/: MidiApple.h  MidiClient.h  MidiController.cpp  MidiController.h  MidiDummy.h  MidiEvent.cpp  MidiEvent.h  MidiJack.cpp  MidiJack.h  MidiPort.cpp  MidiPort.h
src/core/model/: AutomatableModel.cpp  AutomatableModel.h  CMakeLists.txt  MeterModel.cpp  TempoSyncKnobModel.cpp
src/core/note/: CMakeLists.txt  Note.cpp  Note.h
src/core/plugin/: CMakeLists.txt  DummyEffect.h  DummyInstrument.h  DummyPlugin.h  Effect.cpp  Effect.h  EffectControls.h  ExportFilter.cpp  ExportFilter.h  IPlugin.cpp  ImportFilter.cpp  ImportFilter.h  Instrument.cpp  Instrument.h  Plugin.cpp  Plugin.h  PluginFactory.cpp  PluginFactory.h  ToolPlugin.cpp  ToolPlugin.h
src/core/scale/: CMakeLists.txt  Scale.h
src/core/serialization/: CMakeLists.txt
src/core/track/: AutomationClip.cpp  AutomationClip.h  CMakeLists.txt  Clip.cpp  Clip.h  InstrumentTrack.h
src/core/tracks/: AutomationTrack.cpp  AutomationTrack.h  InstrumentTrack.cpp  InstrumentTrack.h  MidiClip.cpp  MidiClip.h  PatternTrack.cpp  PatternTrack.h  SampleTrack.cpp  SampleTrack.h
src/core/view/: CMakeLists.txt
src/gui/: CMakeLists.txt  MainWindow.cpp  SampleTrackWindow.cpp
src/gui/QML/: CMakeLists.txt  ClipViewDelegate.qml  GuiApplication.cpp  GuiApplication.h  LMMSProperty.h  QMLDummyInstrument.cpp  TrackViewDelegate.qml  lmms2.pro  lmms2.qml  lmms2.qmlproject  main.cpp
src/gui/QML/widgets/: Dial.qml  (+3 more)
src/gui/QWidgets/: AudioDeviceSetupWidget.cpp  AudioDeviceSetupWidget.h  AutomatableModelView.cpp  AutomatableModelView.h  CMakeLists.txt  ControllerRackView.cpp  ControllerRackView.h  ControllerView.cpp  ControllerView.h  Controls.cpp  Controls.h  EffectRackView.cpp  EffectRackView.h  EffectView.cpp  EffectView.h  FileBrowser.cpp  FileBrowser.h  GuiApplication.cpp  GuiApplication.h  LadspaControlView.cpp  LadspaControlView.h  LfoControllerDialog.cpp  LinkedModelGroupViews.cpp  LinkedModelGroupViews.h  LinkedModelGroups.cpp  LinkedModelGroups.h  LmmsPalette.cpp  LmmsPalette.h  LmmsStyle.cpp  Lv2ViewBase.cpp  MainApplication.cpp  MainWindow.cpp  MainWindow.h  MicrotunerConfig.cpp  MicrotunerConfig.h  MidiCCRackView.cpp  MidiCCRackView.h  MidiSetupWidget.cpp  MidiSetupWidget.h  MixerLine.cpp  (+25 more)
src/gui/clips/: ClipView.cpp  MidiClipView.cpp
src/gui/editors/: PatternEditor.cpp  SongEditor.cpp  TrackContainerView.cpp
src/gui/headless/: GuiApplication.cpp  GuiApplication.h  main.cpp
src/gui/instrument/: InstrumentTrackWindow.cpp
src/gui/interface/: IAutomationEditor.h  IFileDialog.h  IGuiApplication.h  IMainWindow.h  IMixerView.h  IPatternEditor.h  IPianoRoll.h  IPianoRollWindow.h  IProjectNotes.h  ISongEditor.h  IStepRecorderWidget.h  ITimeLineWidget.cpp  ITimeLineWidget.h  InstrumentFactory.h  PluginView.h
src/gui/tracks/: AutomationTrackView.h  SampleTrackView.cpp
src/gui/widgets/: MixerChannelLcdSpinBox.cpp
src/tracks/: AutomationTrack.cpp  InstrumentTrack.cpp  MidiClip.cpp  PatternTrack.cpp  SampleTrack.cpp
(+437 files in other folders)
