add_subdirectory(base)
add_subdirectory(memory)
add_subdirectory(controller)
add_subdirectory(scale)
add_subdirectory(effect)
add_subdirectory(plugin)
add_subdirectory(engine)
add_subdirectory(handles)
add_subdirectory(instrument)
add_subdirectory(model)
add_subdirectory(journalling)
add_subdirectory(view)
add_subdirectory(filter)
add_subdirectory(note)
add_subdirectory(track)
add_subdirectory(config)

set(LMMS_SRCS
	${LMMS_SRCS}

	core/BandLimitedWave.cpp
	core/base64.cpp
	core/Clipboard.cpp
	core/DataFile.cpp
	core/DrumSynth.cpp
	core/EnvelopeAndLfoParameters.cpp
	core/fft_helpers.cpp
	core/Mixer.cpp
	core/ImportFilter.cpp
	core/InlineAutomation.cpp
	core/InstrumentFunctions.cpp
	core/InstrumentSoundShaping.cpp
	core/Keymap.cpp
	core/Ladspa2LMMS.cpp
	core/LadspaControl.cpp
	core/LadspaManager.cpp
	core/LfoController.cpp
	core/LinkedModelGroups.cpp
	core/LocklessAllocator.cpp
	core/Microtuner.cpp
	core/MixHelpers.cpp
	core/Oscillator.cpp
	core/PathUtil.cpp
	core/PatternClip.cpp
	core/PatternStore.cpp
	core/PeakController.cpp
	core/PerfLog.cpp
	core/Piano.cpp
	core/PluginIssue.cpp
	core/PluginFactory.cpp
	core/ProjectRenderer.cpp
	core/ProjectVersion.cpp
	core/RemotePlugin.cpp
	core/RenderManager.cpp
	core/RingBuffer.cpp
	core/SampleBuffer.cpp
	core/SampleClip.cpp
	core/Song.cpp
	core/ToolPlugin.cpp
	core/TrackContainer.cpp
	core/VstSyncController.cpp
	core/StepRecorder.cpp

	core/audio/AudioAlsa.cpp
	core/audio/AudioDevice.cpp
	core/audio/AudioFileDevice.cpp
	core/audio/AudioFileMP3.cpp
	core/audio/AudioFileOgg.cpp
	core/audio/AudioFileFlac.cpp
	core/audio/AudioFileWave.cpp
	core/audio/AudioJack.cpp
	core/audio/AudioOss.cpp
	core/audio/AudioSndio.cpp
	core/audio/AudioPort.cpp
	core/audio/AudioPortAudio.cpp
	core/audio/AudioSoundIo.cpp
	core/audio/AudioPulseAudio.cpp
	core/audio/AudioSampleRecorder.cpp
	core/audio/AudioSdl.cpp

	core/lv2/Lv2Basics.cpp
	core/lv2/Lv2ControlBase.cpp
	core/lv2/Lv2Evbuf.cpp
	core/lv2/Lv2Features.cpp
	core/lv2/Lv2Ports.cpp
	core/lv2/Lv2Proc.cpp
	core/lv2/Lv2Manager.cpp
	core/lv2/Lv2Options.cpp
	core/lv2/Lv2SubPluginFeatures.cpp
	core/lv2/Lv2UridCache.cpp
	core/lv2/Lv2UridMap.cpp

	core/midi/MidiAlsaRaw.cpp
	core/midi/MidiAlsaSeq.cpp
	core/midi/MidiClient.cpp
	core/midi/MidiController.cpp
	core/midi/MidiEventToByteSeq.cpp
	core/midi/MidiJack.cpp
	core/midi/MidiOss.cpp
	core/midi/MidiSndio.cpp
	core/midi/MidiApple.cpp
	core/midi/MidiPort.cpp
	core/midi/MidiWinMM.cpp

	PARENT_SCOPE
)
